# macroforge-ts

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  PLUGIN_ISSUES_ANALYSIS.md  TODO.md  biome.json  macroforge.json  package-lock.json  package.json  pixi.toml  ts-macros.json
.github/workflows/: CI.yml  deploy-website.yml
.zed/: settings.json
crates/: Cargo.toml
crates/examples/: derive_debug.rs
crates/macroforge_ts/: .gitignore  Cargo.toml  README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json  result.js  result.mjs  serde.d.ts  serde.js  serde.mjs  serde.ts
crates/macroforge_ts/js/reexports/: effect.d.ts  effect.mjs  effect.ts  index.d.ts  index.mjs  index.ts
crates/macroforge_ts/js/serde/: index.d.ts  index.ts
crates/macroforge_ts/js/traits/: index.d.ts  index.ts
crates/macroforge_ts/js/utils/: effect.ts  index.d.ts  index.mjs  index.ts
crates/macroforge_ts/npm/darwin-arm64/: README.md  package.json
crates/macroforge_ts/npm/darwin-x64/: README.md  package.json
crates/macroforge_ts/npm/linux-arm64-gnu/: README.md  package.json
crates/macroforge_ts/npm/linux-x64-gnu/: README.md  package.json
crates/macroforge_ts/npm/win32-arm64-msvc/: README.md  package.json
crates/macroforge_ts/npm/win32-x64-msvc/: README.md  package.json
crates/macroforge_ts/src/: build.rs  lib.rs  macro_host.rs
crates/macroforge_ts/src/builtin/: derive_clone.rs  derive_common.rs  derive_debug.rs  derive_default.rs  derive_eq.rs  derive_hash.rs  derive_ord.rs  derive_partial_eq.rs  derive_partial_ord.rs  mod.rs  return_types.rs
crates/macroforge_ts/src/builtin/serde/: derive_deserialize.rs  derive_serialize.rs  mod.rs
crates/macroforge_ts/src/host/: config.rs  derived.rs  dispatch.rs  error.rs  expand.rs  macros.rs  mod.rs  package_registry.rs  patch_applicator.rs  registry.rs  traits.rs
crates/macroforge_ts/src/test/: decorator_stripping.rs  mod.rs
crates/macroforge_ts/tests/: cli.rs
crates/macroforge_ts_macros/.github/workflows/: ci.yml
crates/macroforge_ts_syn/: Cargo.toml
crates/swc-napi-macros/: Cargo.toml  index.d.ts  index.js  package.json
crates/swc-napi-macros/src/: lib.rs  macro_host.rs  macros.rs  test.rs
crates/swc-napi-macros/src/builtin/: derive_clone.rs  derive_debug.rs  derive_eq.rs  mod.rs
crates/ts_macro_abi/: Cargo.toml
crates/ts_macro_abi/src/: helpers.rs  lib.rs  patch.rs
crates/ts_macro_abi/src/ir/: class.rs  context.rs  decorators.rs  interface.rs
crates/ts_macro_cli/: Cargo.toml
crates/ts_macro_cli/src/: main.rs
crates/ts_macro_derive/src/: lib.rs
crates/ts_macro_host/: Cargo.toml  macro.toml
crates/ts_macro_host/src/: config.rs  derived.rs  dispatch.rs  expand.rs  lib.rs  macros.rs  package_registry.rs  patch_applicator.rs  registry.rs  traits.rs
crates/ts_macro_host/src/builtin/: derive_clone.rs  derive_debug.rs  derive_eq.rs  mod.rs
crates/ts_macros_builtin/: Cargo.toml
crates/ts_macros_builtin/src/: derive_clone.rs  derive_debug.rs  derive_eq.rs  lib.rs
crates/ts_quote/: Cargo.toml  README.md
crates/ts_quote/src/: lib.rs  template.rs  test.rs
crates/ts_syn/: Cargo.toml
crates/ts_syn/src/: derive.rs  errors.rs  lib.rs  lower.rs  parse.rs  quote.rs  stream.rs
crates/ts_syn/src/abi/: source_map.rs
docs/: BOOK.md
playground/: package.json  tsconfig.json  vite.config.ts
playground/macro/: Cargo.toml  gigaform.ts  index.d.ts  index.darwin-x64.node  index.js  macro.toml  package-lock.json  package.json  playground-macro.darwin-x64.node
playground/macro/src/: lib.rs  main.rs  native.rs
playground/macro/src/gigaform/: field_descriptors.rs  form_data.rs  i18n.rs  mod.rs  naming.rs  parser.rs  types.rs
playground/src/: macros.d.ts  main.ts
playground/svelte/: .gitignore  macroforge.config.ts  new-macro.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
playground/svelte/src/lib/: errors.svelte.ts  macros.ts
playground/svelte/src/routes/: +page.svelte
playground/test-macros-svelte/: package-lock.json  package.json
playground/tests/: examples.test.mjs  expansion.test.mjs  field-controller-macro.test.mjs  foreign-types.test.mjs  function-naming-style.test.mjs  gigaform.test.mjs  package-lock.json  package.json  serde.test.mjs  typescript-plugin-macro-intellisense.test.mjs  vite-plugin-e2e.test.mjs  vtsls-playground-switch.test.js
playground/tests/.tmp-projects/manual-b4pwrJ/: input.ts
playground/tests/.tmp-projects/manual-tQO681/: input.ts  macroforge.json  package.json
playground/tests/e2e/: vanilla-macros.spec.ts
playground/tests/rust-tests/: Cargo.toml
playground/tests/rust-tests/src/: lib.rs
playground/tests/rust-tests/src/fixtures/: field-controller-test.ts  macro-user.ts
playground/tests/validators/: array-validators.test.mjs  bigint-validators.test.mjs  custom-validators.test.mjs  date-validators.test.mjs  edge-cases.test.mjs  helpers.mjs  number-validators.test.mjs  string-validators.test.mjs
playground/tests/validators/.temp/: array-validator-tests.ts  bigint-validator-tests.ts  custom-validator-tests.ts  date-validator-tests.ts  edge-case-tests.ts  number-validator-tests.ts  (+1 more)
playground/vanilla/: index.html  macroforge.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
playground/vanilla/src/: all-macros-test.expanded.ts  all-macros-test.ts  enum-type-examples.expanded.ts  enum-type-examples.ts  form-model.expanded.ts  form-model.ts  main.expanded.ts  main.ts  user.expanded.ts  user.ts  validator-form.expanded.ts  validator-form.ts
scripts/: build-docs-book.cjs  bump-version.cjs  check-docs-freshness.cjs  cleanbuild-all.cjs  diagnostics.cjs  expand-playground.cjs  extract-rust-docs.cjs  extract-ts-docs.cjs  generate-readmes.cjs  get-diagnostics.cjs  prep-for-commit.cjs  sync-website.cjs  test-crash-handler.js  test-native-crash.cjs  test-plugin-expansion.cjs
tests/e2e/: test-zed-vtsls.js
tooling/: .gitignore  versions.json
tooling/.github/workflows/: ci.yml
tooling/scripts/: check-docs-freshness.cjs  prep-for-commit.cjs
website/.github/workflows/: ci.yml
(+160 files in other folders)
