[workspace]
members = [
    "crates/macroforge_ts",
    "crates/extensions/macroforge",
    "crates/extensions/svelte-macroforge",
    "crates/ts_syn",
    "crates/ts_quote",
    "playground/macro",
    "crates/ts_macro_derive",
    "playground/tests/rust-tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["macroforge contributors"]
license = "MIT"
repository = "https://github.com/rymskip/macroforge"
