[package]
name = "macroforge_ts"
description = "TypeScript macro expansion engine - write compile-time macros in Rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "macroforge"
path = "src/bin/cli.rs"

[dependencies]
# NAPI-RS for Node.js bindings
napi = { version = "3.5.2", features = ["napi8", "compat-mode"] }
napi-derive = "3.3.3"

# SWC Core for TypeScript parsing and transformation
swc_core = { version = "51.0.0", features = [
    "ecma_ast",
    "ecma_parser",
    "ecma_codegen",
    "ecma_visit",
    "ecma_utils",
    "common"
] }

# External crates
macroforge_ts_syn = { version = "0.1.43", path = "../macroforge_ts_syn" }
macroforge_ts_quote = { version = "0.1.43", path = "../macroforge_ts_quote" }
macroforge_ts_macros = { version = "0.1.43", path = "../macroforge_ts_macros" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Case conversion
convert_case = "0.10"

inventory = "0.3.21"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"

# Concurrency
dashmap = "6.1"

# Build script utilities (optional, for napi auto-build)
libc = { version = "0.2", optional = true }

[features]
default = []
# Enable build script utilities (napi_auto_build)
build = ["libc"]

[build-dependencies]
napi-build = "2.3.1"
libc = "0.2"

[dev-dependencies]
tempfile = "3.13.0"
