[package]
name = "macroforge_ts"
description = "TypeScript macro expansion engine - write compile-time macros in Rust"
version = "0.1.42"
edition = "2024"
authors = ["macroforge contributors"]
license = "MIT"
repository = "https://github.com/macroforge-ts/core"
homepage = "https://github.com/macroforge-ts/core"
keywords = ["typescript", "macros", "codegen", "derive"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "macroforge"
path = "src/bin/cli.rs"

[dependencies]
# NAPI-RS for Node.js bindings
napi = { version = "3.5.2", features = ["napi8", "compat-mode"] }
napi-derive = "3.3.3"

# SWC Core for TypeScript parsing and transformation
swc_core = { version = "51.0.0", features = [
    "ecma_ast",
    "ecma_parser",
    "ecma_codegen",
    "ecma_visit",
    "ecma_utils",
    "common"
] }

# Macroforge crates (from crates.io)
macroforge_ts_syn = "0.1.42"
macroforge_ts_quote = "0.1.42"
macroforge_ts_macros = "0.1.42"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Case conversion
convert_case = "0.10"

inventory = "0.3.21"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"

# Concurrency
dashmap = "6.1"

# Build script utilities (optional, for napi auto-build)
libc = { version = "0.2", optional = true }

[features]
default = []
# Enable build script utilities (napi_auto_build)
build = ["libc"]

[build-dependencies]
napi-build = "2.3.1"
libc = "0.2"

[dev-dependencies]
tempfile = "3.13.0"
