[package]
name = "ts_syn"
version = "0.1.0"
edition = "2024"

[features]
default = ["swc"]
swc = ["dep:swc_core"]

[dependencies]
ts_macro_abi = { path = "../ts_macro_abi" }

swc_core = { version = "48", optional = true, default-features = false, features = [
  "common",
  "ecma_ast",
  "ecma_parser",
  "ecma_visit",
  "ecma_quote",
] }

thiserror = "1"
