[package]
name = "playground-macros"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata.cargo-machete]
# napi is required: napi_derive::napi generates code referencing ::napi
ignored = ["napi"]

[lib]
name = "playground_macros"
crate-type = ["rlib", "cdylib"]

[dependencies]
# Core macro framework - re-exports macroforge_ts_syn, macroforge_ts_quote, macroforge_ts_macros, inventory, serde_json
macroforge_ts = { path = "../../crates/macroforge_ts" }
# NAPI deps required directly (napi_derive generates ::napi references)
napi = { version = "3.5.2", features = ["napi8", "compat-mode"] }
napi-derive = "3.3.3"

[build-dependencies]
napi-build = "2.3.1"
