[package]
name = "rust-tests"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
ts_quote = { path = "../../../crates/ts_quote" }
ts_syn = { path = "../../../crates/ts_syn" }
swc_core = { version = "48", features = ["common", "ecma_ast", "ecma_parser"] }
macroforge_ts = { path = "../../../crates/macroforge_ts" }
ts_macro_derive = { path = "../../../crates/ts_macro_derive" }
napi = { version = "3.5.2", features = ["napi8", "compat-mode", "napi5"] }
napi-derive = { version = "3.3.3", features = ["compat-mode"] }
inventory = "0.3"
serde_json = "1.0"

[dev-dependencies]
trybuild = "1.0"
