[package]
name = "rust-tests"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
ts_quote = { path = "../../../crates/ts_quote" }
ts_syn = { path = "../../../crates/ts_syn" }
swc_core = { version = "48", features = ["common", "ecma_ast", "ecma_parser"] }

[dev-dependencies]
trybuild = "1.0"
